[PostVersions] [UI] Fix overflowing source links

--- a/app/javascript/src/styles/specific/post_versions.scss
+++ b/app/javascript/src/styles/specific/post_versions.scss
@@ -157,6 +157,7 @@ div#c-post-versions {
       grid-row: 4;
       @include grid-col(10, 14);
       overflow-wrap: anywhere;
+      overflow-y: scroll;
 
       .diff-list {
         display: flex;
